--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - master
-  pull_request:
+  pull_request_target:
+    types: [opened, synchronize]
   workflow_dispatch:
 
 jobs:
@@ -88,3 +89,41 @@ jobs:
         with:
           name: pdf-output
           path: out/*.pdf
+
+      - name: Create Temporary Link Message for PR
+        if: github.event_name == 'pull_request_target' && success()
+        run: echo "PDF for this PR commit is available [here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts)" > pdf-link.md
+
+      - name: Post Temporary Link in PR
+        if: github.event_name == 'pull_request_target' && success()
+        uses: peter-evans/create-or-update-comment@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body-file: pdf-link.md
+
+  publish:
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+
+      - name: Generate Final PDF and Upload to gh-pages
+        run: |
+          git checkout --orphan gh-pages
+          git rm -rf .
+          cp out/*.pdf latest.pdf
+          git add latest.pdf
+          git commit -m "Update latest PDF for master"
+          git push -f origin gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
