--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,9 +90,19 @@ jobs:
           name: pdf-output
           path: out/*.pdf
 
+      - name: Get Artifact ID
+        if: github.event_name == 'pull_request' && success()
+        id: get_artifact_id
+        run: |
+          ARTIFACT_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts" \
+          | jq -r '.artifacts[0].id')
+          echo "artifact_id=$ARTIFACT_ID" >> $GITHUB_ENV
+
       - name: Create Temporary Link Message for PR
         if: github.event_name == 'pull_request' && success()
-        run: echo "PDF for this PR commit is available [here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts)" > pdf-link.md
+        run: |
+          echo "PDF for this PR commit is available [here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ env.artifact_id }})" > pdf-link.md
 
       - name: Post Temporary Link in PR
         if: github.event_name == 'pull_request' && success()
