--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,15 +84,14 @@ jobs:
         run: ./build.sh
 
       - name: Upload PDF Output
-        if: success()
-        uses: actions/upload-artifact@v3
+        id: artifact-upload-step
+        uses: actions/upload-artifact@v4
         with:
           name: pdf-output
           path: out/*.pdf
 
-      - name: Create Temporary Link Message for PR
-        if: github.event_name == 'pull_request' && success()
-        run: echo "PDF for this PR commit is available [here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts)" > pdf-link.md
+      - name: Output Artifact URL
+        run: echo "Artifact URL is ${{ steps.artifact-upload-step.outputs.artifact-url }}"
 
       - name: Post Temporary Link in PR
         if: github.event_name == 'pull_request' && success()
@@ -101,21 +100,15 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
           issue-number: ${{ github.event.pull_request.number }}
-          body-file: pdf-link.md
-
-  cleanup:
+          body: |
+            PDF for this PR commit is available [here](${{ steps.artifact-upload-step.outputs.artifact-url }}).
+          
+  publish:
     if: github.ref == 'refs/heads/master' && github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Delete Temporary PDF Links in PRs
-        uses: peter-evans/delete-pull-request-comment@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          comment-author: "github-actions[bot]"
-
       - name: Checkout repository
         uses: actions/checkout@v3
 
