--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,61 +16,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Read LaTeX Packages from File
+        id: packages
+        run: |
+          PACKAGES=$(cat latex-packages)
+          echo "packages=$PACKAGES" >> $GITHUB_ENV
+
       - name: Setup TeX Live
         uses: teatimeguest/setup-texlive-action@v3
         with:
-          packages: |
-            ifmtarg
-            acmart
-            scheme-basic
-            amscls
-            amsfonts
-            amsmath
-            xint
-            preprint
-            booktabs
-            caption
-            comment
-            cm-super
-            cmap
-            doclicense
-            draftwatermark
-            environ
-            etoolbox
-            fancyhdr
-            float
-            fontaxes
-            geometry
-            graphics
-            hyperref
-            hyperxmp
-            iftex
-            inconsolata
-            libertine
-            ncctools
-            microtype
-            mmap
-            count1to
-            multitoc
-            prelim2e
-            ragged2e
-            everyshi
-            everysel
-            mweights
-            natbib
-            newtx
-            oberdiek
-            pdftex
-            refcount
-            setspace
-            textcase
-            totpages
-            trimspaces
-            upquote
-            url
-            xcolor
-            xkeyval
-            xstring
+          packages: ${{ env.packages }}
 
       - name: Cache TeX Live Packages
         uses: actions/cache@v3
@@ -112,10 +67,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Configure Git
+      - name: Read LaTeX Packages from File
+        id: packages
         run: |
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          PACKAGES=$(cat latex-packages)
+          echo "packages=$PACKAGES" >> $GITHUB_ENV
+
+      - name: Setup TeX Live
+        uses: teatimeguest/setup-texlive-action@v3
+        with:
+          packages: ${{ env.packages }}
+
+      - name: Cache TeX Live Packages
+        uses: actions/cache@v3
+        with:
+          path: /usr/local/texlive/2024
+          key: texlive-2024-${{ runner.os }}-${{ hashFiles('**/build.sh') }}
+          restore-keys: |
+            texlive-2024-${{ runner.os }}-
 
       - name: Run LaTeX Build Script
         run: ./build.sh
